# aerial_mapper

./: Makefile
aerial_mapper_sitl/: CMakeLists.txt  README.md  package.xml
aerial_mapper_sitl/include/aerial_mapper_sitl/: simulation.h
aerial_mapper_sitl/launch/: px4-sitl.launch
aerial_mapper_sitl/models/techpod_depth_camera/: techpod_depth_camera.sdf
aerial_mapper_sitl/rviz/: px4_sitl.rviz
aerial_mapper_sitl/src/: simulation.cc  simulation_node.cc
